objects/OUV_OrderRequest__c.object
<CustomObject>
    <label>ATO Request</label>
    <nameField>
        <displayFormat>ATO-{00000}</displayFormat>
        <label>ATO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATO Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>CI_Code__c</fullName>
        <label>CI Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_User__c</fullName>
        <inlineHelpText>The JLR CDSID of the person requesting, using or who is responsible for the vehicle whilst on loan.</inlineHelpText>
        <label>Internal JLR Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet</label>
        <referenceTo>OUV_Fleet__c</referenceTo>
        <relationshipLabel>ATO Requests</relationshipLabel>
        <relationshipName>ATO_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_CountryMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_RegionalFD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the ID of Regional FD user</description>
        <label>Regional Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_RegionalMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_OverBudget1__c</fullName>
        <inlineHelpText>Budget calculation excludes orders pending approval</inlineHelpText>
        <label>Over Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ReworkRoute__c</fullName>
        <label>Rework Route</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Market__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ActualToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_FleetManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This holds the id of the fleet manager</description>
        <label>Approval Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_RequestsZCOO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_LL4_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Approver (LL4)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests_LL4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_LL6_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver (LL6)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests_LL6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_User__c</fullName>
        <inlineHelpText>This is an encrypted field. Add the driver details here (for external vehicle users only). This field is not visible to all users.</inlineHelpText>
        <label>Vehicle User</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_DisposalRoute__c</fullName>
        <label>Disposal Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_FinancialYear__c</fullName>
        <description>This field will save the Fiscal year for the order request record.</description>
        <label>Financial Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_AddToFleetDate__c</fullName>
        <label>Proposed Add To Fleet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_FinanceManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Level1Category__c</fullName>
        <description>Exclude used / employee cars values</description>
        <label>OUV Reporting Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Buybacks</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicles</fullName>
                </value>
                <value>
                    <fullName>Employee Cars</fullName>
                    <isActive>false</isActive>
                    <label>Employee Cars</label>
                </value>
                <value>
                    <fullName>Used</fullName>
                    <isActive>false</isActive>
                    <label>Used</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Level2Category__c</fullName>
        <label>OUV Reporting Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Level1Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Social Responsibility (CSR)</fullName>
                </value>
                <value>
                    <fullName>VIP Loans</fullName>
                </value>
                <value>
                    <fullName>Launch/Events</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>JLR Experience</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Marketing Asset Production</fullName>
                </value>
                <value>
                    <fullName>Product Placement</fullName>
                </value>
                <value>
                    <fullName>Demonstrators</fullName>
                </value>
                <value>
                    <fullName>Homologation Cars</fullName>
                </value>
                <value>
                    <fullName>Customer Service -Diagnostics/Methods/Product Investigation/Training</fullName>
                </value>
                <value>
                    <fullName>Customer Service - Loan Vehicles</fullName>
                </value>
                <value>
                    <fullName>Product Development Vehicles</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Support Functions Vehicles</fullName>
                </value>
                <value>
                    <fullName>Pool Cars</fullName>
                </value>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Cars awaiting sale / rework / disposal</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Employee vehicle returns/MRC Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Classic Donor vehicles</fullName>
                </value>
                <value>
                    <fullName>Customer Buybacks</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks</fullName>
                </value>
                <value>
                    <fullName>Writtendown/Provisioned Units (£1 Vehicles)</fullName>
                    <label>Written down/Provisioned Units (£1 Vehicles)</label>
                </value>
                <value>
                    <fullName>Heritage/Museum Vehicles</fullName>
                </value>
                <value>
                    <fullName>Terms of Employment</fullName>
                </value>
                <value>
                    <fullName>Job Related</fullName>
                </value>
                <value>
                    <fullName>Press/PR</fullName>
                </value>
                <value>
                    <fullName>Sponsership</fullName>
                    <isActive>false</isActive>
                    <label>Sponsership</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Level3Category__c</fullName>
        <label>OUV Reporting Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Level2Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Royal Household (RHH)</fullName>
                </value>
                <value>
                    <fullName>VIP - Corporate</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Charged)</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Free of Charge)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>---</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validation rules will not run if this field is changing</description>
        <label>OUV_ByPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_OrderRequestType__c</fullName>
        <inlineHelpText>Single Vehicle-NEW: An incremental vehicle

Single vehicle-Replacement: Replaces existing vehicle (1 in 1 out)

Multiple Vehicles-Event: Vehicles relating to a single event

Multiple Vehicles-Fleet: Vehicles relating to one fleet buyback contract</inlineHelpText>
        <label>ATO Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Vehicle New</fullName>
                    <default>true</default>
                    <label>Single Vehicle - New</label>
                </value>
                <value>
                    <fullName>Single Vehicle - Replacement</fullName>
                </value>
                <value>
                    <fullName>Multiple Vehicles - Event</fullName>
                </value>
                <value>
                    <fullName>Multiple Vehicles - Fleet</fullName>
                    <label>Multiple Vehicles - Fleet Buyback</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ShortDescription__c</fullName>
        <inlineHelpText>High Level Description of Vehicle Activity - Do not add any personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Quick Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATO_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATO_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_AddtoFleetQuarter__c</fullName>
        <formula>IF((MONTH(OUV_AddToFleetDate__c)&gt;=1 &amp;&amp; MONTH(OUV_AddToFleetDate__c)&lt;=3),&apos;Q4&apos;, IF((MONTH(OUV_AddToFleetDate__c)&gt;=4 &amp;&amp; MONTH(OUV_AddToFleetDate__c)&lt;=6),&apos;Q1&apos;, IF((MONTH(OUV_AddToFleetDate__c)&gt;=7 &amp;&amp; MONTH(OUV_AddToFleetDate__c)&lt;=9),&apos;Q2&apos;, IF((MONTH(OUV_AddToFleetDate__c)&gt;=10 &amp;&amp; MONTH(OUV_AddToFleetDate__c)&lt;=12),&apos;Q3&apos;,&apos;NA&apos;)  )  )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Fleet Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Additional_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATO_Requests_DoA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_FleetAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATO_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_InitialRetailPrice__c</fullName>
        <description>Field update in process builder based on the order request type.</description>
        <label>Initial Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_OrderJustification__c</fullName>
        <inlineHelpText>Business Justification should include: Use of vehicle KPI’s (Key Performance Indicators) - Do not add any personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Business Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_OrderRequestStatus__c</fullName>
        <description>This picklist holds the different status values for order request record based on approval process</description>
        <label>ATO Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ProductDescription__c</fullName>
        <description>Field update in process builder based on the order request type.</description>
        <inlineHelpText>To navigate to the OUV vehicles search for the ATO number using the global search functionality.</inlineHelpText>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_RemarketingManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remarketing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Category__c</fullName>
        <formula>CASE(
OUV_Level2Category__c, 
&quot;Terms of Employment&quot;, &quot;Unactionable&quot;, 
&quot;Job Related&quot;, &quot;Unactionable&quot;,
&quot;Press/PR&quot;,&quot;Active&quot;,
&quot;Corporate Social Responsibility (CSR)&quot;,&quot;Active&quot;,
&quot;VIP Loans&quot;,
CASE(OUV_Level3Category__c,
&quot;Royal Household (RHH)&quot;,&quot;Active&quot;,
&quot;VIP - Individual (Free of Charge)&quot;,&quot;Active&quot;,
&quot;VIP - Individual (Charged)&quot;,&quot;Unactionable&quot;,
&quot;VIP - Corporate&quot;,&quot;Active&quot;,&quot;&quot;),
&quot;Launch/Events&quot;,&quot;Active&quot;,
&quot;Training&quot;,&quot;Active&quot;,
&quot;JLR Experience&quot;,&quot;Active&quot;,
&quot;Sponsorship&quot;,&quot;Active&quot;,
&quot;Marketing Asset Production&quot;,&quot;Active&quot;,
&quot;Product Placement&quot;,&quot;Active&quot;,&quot;Demonstrators&quot;,&quot;Active&quot;,
&quot;Homologation Cars&quot;,&quot;Active&quot;,
&quot;Customer Service -Diagnostics/Methods/Product Investigation/Training&quot;,&quot;Active&quot;,
&quot;Customer Service - Loan Vehicles&quot;,&quot;Active&quot;,&quot;Product Development Vehicles&quot;,&quot;Active&quot;,
&quot;Manufacturing/Support Functions Vehicles&quot;,&quot;Active&quot;,
&quot;Pool Cars&quot;,&quot;Active&quot;,
&quot;All Other&quot;,&quot;Active&quot;,
&quot;Cars awaiting sale / rework / disposal&quot;,&quot;Inactive&quot;,
&quot;Fleet Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,
&quot;Employee vehicle returns/MRC Buybacks awaiting rework/resale&quot;,&quot;Inactive&quot;,
&quot;Classic Donor vehicles&quot;,&quot;Inactive&quot;,
&quot;Customer Buybacks&quot;,&quot;Inactive&quot;,
&quot;Fleet Buybacks&quot;,&quot;Unactionable&quot;,
&quot;Written Down/Provisioned Units (£1 vehicles)&quot;,&quot;Unactionable&quot;,
&quot;Heritage/Museum Vehicles&quot;,&quot;Unactionable&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Reporting Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_UtilisationDetails__c</fullName>
        <label>Utilisation Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ATONameplateSummary__c</fullName>
        <inlineHelpText>Please complete for Multiple Vehicle ATO, e.g.4 x X760, 3 x L405</inlineHelpText>
        <label>ATO Vehicle Line Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Replacement_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field created for GOP-93.To select old vehicle which needs to be replaced.</description>
        <label>Replacement Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>ATO Requests</relationshipLabel>
        <relationshipName>ATO_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ProposedHandedInDate__c</fullName>
        <label>Proposed Hand In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Additional_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Operations Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ATO_Requests_DoA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_BudgetCalculationNote__c</fullName>
        <formula>&quot;Budget calculation excludes orders pending approval&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Calculation Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_How_many_ATO_Line_Items__c</fullName>
        <label>How many ATO Line Items?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_NumberofvehiclesOrdered__c</fullName>
        <description>This field will hold value of total vehicles ordered</description>
        <label>Number of vehicles Requested</label>
        <summaryForeignKey>OUV_OrderRequestLineItem__c.OUV_OrderRequest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_InitialRetailPriceCurrency__c</fullName>
        <description>Field update in process builder based on the order request type.</description>
        <label>Initial Retail Price Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_TargetUtilisationPercentage__c</fullName>
        <label>Target Utilisation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleLocalIntegrationCost__c</fullName>
        <label>Vehicle Local Integration Cost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleMileageNew__c</fullName>
        <formula>TEXT(OUV_Replacement_Vehicle__r.OUV_VehicleMileage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Vehicle Mileage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_The_Total_Initial_Retail_Price__c</fullName>
        <label>Total Initial Retail Price</label>
        <summarizedField>OUV_OrderRequestLineItem__c.OUV_Total_Initial_Retail_Price__c</summarizedField>
        <summaryForeignKey>OUV_OrderRequestLineItem__c.OUV_OrderRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleDescriptionNew__c</fullName>
        <formula>OUV_Replacement_Vehicle__r.OUV_ReplacementVehicleDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Vehicle Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_ReplacementVehicleVINOrderNumberNew__c</fullName>
        <formula>OUV_Replacement_Vehicle__r.OUV_FullVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Vehicle VIN / Order Number</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>OUV_ATO_Request_Editable</fullName>
        <active>true</active>
        <description>This is the standard ATO Request type available to users</description>
        <label>OUV ATO Request Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_ATO_Request_READ_ONLY</fullName>
        <active>true</active>
        <description>This is a read only RT for ATO Request</description>
        <label>OUV ATO Request READ ONLY</label>
    </recordTypes>
    <sharingReasons>
        <fullName>OUV_Fleet_Members__c</fullName>
        <label>Fleet Members</label>
    </sharingReasons>
    <validationRules>
        <fullName>OUV_CI_Code_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Text(OUV_Market__c)==&quot;United Kingdom&quot; &amp;&amp; ISBLANK(CI_Code__c)</errorConditionFormula>
        <errorMessage>Please fill the CI code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_ATO_MarketCheck</fullName>
        <active>true</active>
        <description>Check Market</description>
        <errorConditionFormula>/*Europe Market*/
AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),
($UserRole.Name =&apos;French Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;France&apos;))) || 
($UserRole.Name =&apos;Iberia Market Team&apos; &amp;&amp; !((ISPICKVAL(OUV_Market__c, &apos;Spain&apos;)) || (ISPICKVAL(OUV_Market__c, &apos;Portugal&apos;))))||
($UserRole.Name =&apos;Austria Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Austria&apos;)))||
($UserRole.Name =&apos;Benelux Market Team&apos; &amp;&amp; !((ISPICKVAL(OUV_Market__c, &apos;Belgium&apos;)) || (ISPICKVAL(OUV_Market__c, &apos;Netherlands&apos;))))||
($UserRole.Name =&apos;Germany Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Germany&apos;)))||
($UserRole.Name =&apos;Italy Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Italy&apos;)))||
/*Overseas Market*/
($UserRole.Name =&apos;Singapore Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Singapore&apos;)))||
($UserRole.Name =&apos;India Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;India&apos;)))||
($UserRole.Name =&apos;Taiwan Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Taiwan&apos;)))||
($UserRole.Name =&apos;Mexico Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Mexico&apos;)))||
($UserRole.Name =&apos;Columbia Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Columbia&apos;)))||
($UserRole.Name =&apos;Brazil Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Brazil&apos;)))||
($UserRole.Name =&apos;MENA Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;MENA&apos;)))||
($UserRole.Name =&apos;South Africa Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;South Africa&apos;)))||
($UserRole.Name =&apos;Australia Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Australia&apos;)))||
($UserRole.Name =&apos;Japan Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;Japan&apos;)))||
($UserRole.Name =&apos;South Korea Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;South Korea&apos;)))||
/*Major Markets*/
($UserRole.Name =&apos;China Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;China&apos;)))||
($UserRole.Name =&apos;UK Market Team&apos; &amp;&amp; !(ISPICKVAL(OUV_Market__c, &apos;UK&apos;)))||
($UserRole.Name =&apos;NAS Market Team&apos; &amp;&amp; !((ISPICKVAL(OUV_Market__c, &apos;USA&apos;)) || (ISPICKVAL(OUV_Market__c, &apos;Canada&apos;))))
)</errorConditionFormula>
        <errorMessage>Cannot create ATO request, please select appropriate market.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ATO_Create_Line_Limits</fullName>
        <active>true</active>
        <description>Prevent SOQL limits by restricting to 2000 max</description>
        <errorConditionFormula>NOT(ISBLANK( OUV_How_many_ATO_Line_Items__c )) &amp;&amp;
(OUV_How_many_ATO_Line_Items__c &lt;0 || OUV_How_many_ATO_Line_Items__c &gt;2000)</errorConditionFormula>
        <errorMessage>Please only create in groups smaller than 2000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Disposal_Rework_Routes</fullName>
        <active>true</active>
        <description>Rework must be selected</description>
        <errorConditionFormula>AND(
 ISPICKVAL( OUV_DisposalRoute__c , &quot;Sale&quot;),
  ISBLANK(TEXT( OUV_ReworkRoute__c ))   
)</errorConditionFormula>
        <errorMessage>Rework must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multi_Vehicle_Fleet_Unactionable</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || ISCHANGED(OUV_OrderRequestType__c) ||  ISCHANGED(OUV_Level1Category__c) || ISCHANGED(OUV_Level2Category__c)) &amp;&amp; TEXT(OUV_OrderRequestType__c) == &apos;Multiple Vehicles - Fleet&apos;  &amp;&amp; OUV_Reporting_Category__c != &apos;Unactionable&apos;</errorConditionFormula>
        <errorMessage>An ATO with a Request Type &apos;Multiple Vehicles - Fleet Buyback&apos; can only be used for Fleet Buyback vehicles</errorMessage>
    </validationRules>
</CustomObject>